Fixed line spacing, filled in meetings/events

--- a/static/styles.css
+++ b/static/styles.css
@@ -92,6 +92,7 @@ ul li {
     padding: 0.8rem;
     border-radius: 5px;
     font-weight: 500;
+    line-height: 2;
 }
 
 /* our team */
